--- a/src/components/countryCard.hbs
+++ b/src/components/countryCard.hbs
@@ -1,11 +1,12 @@
 {{#each this}}
-<div class="country__card">
-<img src="{{flags.png}}" alt="flag of country" class="country__flag">
-<h1 class="country__name">{{name.official}}</h1>
-    <p class="country__properties">Capital: {{capital}}</p>
-    <p class="country__properties">Population: {{population}}</p>
-    <p class="country__properties">Language: {{#each languages}}
-        {{#if @index}},{{/if}} {{this}}{{/each}}
-    </p>
+<div >
+    <div class="country__list">
+        <img src="{{flags.svg}}" alt="flag of country" class="country__flag">
+        <h1 class="country__name">{{name.official}}</h1>
+    </div>
+    <p class="country__properties">Capital:<span class="country__properties--description">{{capital}}</span></p>
+    <p class="country__properties">Population:<span class="country__properties--description">{{population}}</span></p>
+    <p class="country__properties">Language:<span class="country__properties--description">{{#each languages}}
+        {{#if @index}},{{/if}} {{this}}{{/each}}</span></p>
 </div>
 {{/each}}
