--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -17,4 +17,24 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.country__list {
+  display: flex;
+  align-items: center;
+}
+
+.country__flag {
+  width: 50px;
+  margin-right: 15px;
+}
+
+.country__properties {
+  font-weight: 900;
+  margin-right: 15px;
+}
+
+.country__properties--description {
+  font-weight: 500;
+  margin-left: 10px;
 }
