--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,15 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(
+    27deg,
+    rgba(0, 211, 255, 0.7682423311121324) 0%,
+    rgba(9, 9, 121, 0.434908997778799) 44%,
+    rgba(2, 0, 36, 1) 81%
+  );
 }
 
 #search-box {
